--- a/NetworkEditor/CHANGES
+++ b/NetworkEditor/CHANGES
@@ -1,6 +1,7 @@
 2010-03-04 NetworkEditor 1.4.0
 '3D moluscs in the space release'
  * SVN $Revision$
+ * Using CLAM 1.4.0
  * Networks can be paused (in NetworkEditor and OfflinePlayer)
  * Fix: Playback status changes from the backend side are pooled by the indicator
  * Typed controls: controls deal with other types than floats
