--- a/SMSTools/CHANGES
+++ b/SMSTools/CHANGES
@@ -1,5 +1,7 @@
-2008-??-?? SMSTools 0.4.11 SVN $Revision$
-''
+2010-03-04 SMSTools 0.4.12
+'3D molluscs on the space release'
+ * SVN $Revision: 11960$
+ * Using CLAM 1.4.0
 
 2008-08-11 SMSTools 0.4.10
 'Shooting flying plugins release'
