--- a/Voice2MIDI/CHANGES
+++ b/Voice2MIDI/CHANGES
@@ -1,4 +1,4 @@
-2008-??-?? Voice2MIDI 0.3.10
+2010-03-05 Voice2MIDI 0.3.10
 '3D molluscs on the space release'
  * SVN $Revision: 11960$
  * Using CLAM 1.4.0
