--- a/trunk/NetworkEditor/debian/changelog
+++ b/trunk/NetworkEditor/debian/changelog
@@ -1,3 +1,16 @@
+clam-networkeditor (1.4.0-2) lucid; urgency=low
+
+  * Example files were dupped in two packages clam-networkeditor and 
+    clam-networkeditor-examples.
+
+ -- CLAM Team <developers@clam-project.org>  Mon, 08 Mar 2010 23:51:58 +0100
+
+clam-networkeditor (1.4.0-1) lucid; urgency=low
+
+  * New upstream release. 
+
+ -- CLAM Team <developers@clam-project.org>  Mon, 08 Mar 2010 23:51:13 +0100
+
 clam-networkeditor (1.3.1~svn12860-1) unstable; urgency=low
 
   * Updated the new website to http://clam-project.org
