--- a/trunk/SMSTools/CHANGES
+++ b/trunk/SMSTools/CHANGES
@@ -1,6 +1,9 @@
+2010-??-?? SMSTools 0.4.13 SVN $Revision: 11960$
+
+
 2010-03-05 SMSTools 0.4.12
 '3D molluscs on the space release'
- * SVN $Revision: 11960$
+ * SVN Revision: 14035
  * Using CLAM 1.4.0
 
 2008-08-11 SMSTools 0.4.10
