--- a/Voice2MIDI/CHANGES
+++ b/Voice2MIDI/CHANGES
@@ -1,6 +1,9 @@
+2010-??-?? Voice2MIDI 0.3.10 SVN $Revision: 11960$
+
+
 2010-03-05 Voice2MIDI 0.3.10
 '3D molluscs on the space release'
- * SVN $Revision: 11960$
+ * SVN Revision: 14035
  * Using CLAM 1.4.0
 
 2008-08-11 Voice2MIDI 0.3.9
