--- a/CLAM/examples/TickExtractor/README
+++ b/CLAM/examples/TickExtractor/README
@@ -1,3 +1,3 @@
 
- This example compiles with old versions of CLAM (< 0.7?). It needs to be ported to current version.
+The TickExtractor example extract rhythm related features from an audio file.
 
