* TickExtractor/GT_FilterBank: uses libsamplerate instead of old libresample    that wasn't available anywhere having to include it in our sources.    The FASTEST method matched 100% with all the inputs in clam-testdata/rythm_wavs  * Added a notice on the INSTALL file

--- a/CLAM/examples/INSTALL.txt
+++ b/CLAM/examples/INSTALL.txt
@@ -5,6 +5,6 @@ Change /usr to the path CLAM is installed on.
 Beside the ones needed to compile CLAM you will need a number 
 of extra libraries available such as:
 * aubio (http://aubio.org)
-
+* samplerate (http://www.mega-nerd.com/SRC)
 
 
