--- a/trunk/chordata/CHANGES
+++ b/trunk/chordata/CHANGES
@@ -1,4 +1,6 @@
 2010-??-?? chordata 1.1.0 SVN $Revision: 11172$
+ * Proper credits to Pawell Bartkiewicz and Roman Goj in the about box
+   (sorry for that, the about box was just copied from NetworkEditor)
 
 2010-03-05 chordata 1.0.0
 '3D molluscs in the space release'
