--- a/CLAM/plugins/osc/INSTALL
+++ b/CLAM/plugins/osc/INSTALL
@@ -3,6 +3,6 @@ To run the example clamnetworks you might need to change some processing configu
 
 sudo mkdir /usr/local/share/clam
 cd /usr/local/share/clam
-sudo wget http://clam-project.org/clam_data/trunk/RythmDescription/Data -l 1
+sudo wget http://clam-project.org/clam_data/trunk/RythmDescription/Data -r -l 1
 
 
