* clam_dependent_libs_checks: xerces-c uses pkg-config to configure (3.0 required)

--- a/CLAM/CHANGES
+++ b/CLAM/CHANGES
@@ -1,4 +1,6 @@
 2010-??-?? CLAM 1.4.1 SVN $Revision$
+ * Dependencies:
+   * xerces-c 2.8 -> xerces-c 3.0 (requires pkg-config file)
  * Removed some deprecated symbols
    * enum EFFTType
    * Untemplatized ComplexTmpl/PolarTmpl -> Complex/Polar
