--- a/trunk/CLAM/CHANGES
+++ b/trunk/CLAM/CHANGES
@@ -1,5 +1,8 @@
 
 2010-??-?? CLAM 1.4.1 SVN $Revision$
+ * Infrastructure:
+   * Network added a GetProcessingName interface
+   * Network flow control orders port-less processings (control-based sources, sinks and filters) using its y-      position. Reasoning: make the order predictable
  * Dependencies:
    * xerces-c 2.8 -> xerces-c 3.0 (requires pkg-config file)
  * Removed some deprecated symbols
