--- a/CLAM/CHANGES
+++ b/CLAM/CHANGES
@@ -8,6 +8,9 @@
  * Removed some deprecated symbols
    * enum EFFTType
    * Untemplatized ComplexTmpl/PolarTmpl -> Complex/Polar
+ * Bug fixes:
+   * InControls are initialized to the default value of the control type
+     (0 for numerics), this could change the behaviour
  * NetworkPlayers and backends
    * Network backends for plugins are NetworkPlayers now
    * Common Backend code to inspect the network moved to base NetworkPlayer
