--- a/CLAM/CHANGES
+++ b/CLAM/CHANGES
@@ -17,6 +17,8 @@
    * ControlSources and ControlSinks with multiple controls
  * OfflinePlayer accepts a control sequence script, containing in each line: 
    SMPTE controlSourceName and value.
+ * New backends:
+   * CLAM builds LV2 plugins from networks (see wiki tutorials)
  * Added In/OutControl/PortBase::SetName to be able to change the name of a 
    connection without disconnecting it.
  * New plugins:
