--- a/trunk/CLAM/INSTALL
+++ b/trunk/CLAM/INSTALL
@@ -80,19 +80,15 @@ Checkout the subversion repository
  (do "sudo apt-get install <packages>")
 
  * Packages to compile clam libs:
-   build-essential scons ladspa-sdk  libfftw3-dev libjack-dev libmad0-dev libogg-dev libsndfile1-dev libvorbis-dev libid3-3.8.3-dev libasound2-dev portaudio19-dev libxerces-c-dev python-dev
+   build-essential scons ladspa-sdk lv2core libfftw3-dev libjack-dev libmad0-dev libogg-dev libsndfile1-dev libvorbis-dev libid3-3.8.3-dev libasound2-dev portaudio19-dev libxerces-c-dev python-dev
 
- ** to pass the tests: libcppunit-dev 
+ ** to compile and pass the tests: libcppunit-dev 
 
- * Qt4 packages to compile NetworkEditor and Annotator:
- qt4-dev-tools libqt4-dev libqt4-opengl-dev (the last, from revision 11755)
+ * Qt4 packages required to compile most CLAM applications (NetworkEditor, Annotator, Chordata, Voice2Midi...):
+   qt4-dev-tools libqt4-dev libqt4-opengl-dev
 
-NOTE about Qt version: 
-from CLAM svn revision 11755 support to qt4.3 is discontinued and qt4.4 is required.
-If you are a Ubuntu 8.04 (Hardy) user you can enable the hardy-backports repository
-
-* Qt3 packages to compile SMSTools and Voice2MIDI:
- libqt3-headers libqt3-mt-dev 
+ * Qt3 packages to compile SMSTools:
+   libqt3-headers libqt3-mt-dev 
 
  
  Redhat / Fedora Core packages list (tested with FC5)
