--- a/ipyclam/TODO
+++ b/ipyclam/TODO
@@ -5,12 +5,11 @@
 
 
 - Polishing connector interface:
-	- Dummy_NetworkProxy.connectorInfo failure case (assert? exception?)
+	- Dummy_NetworkProxy.connectorType,Index... failure case (assert? exception?)
 [X]	- Index and type should be queried to the proxy instead of passed as constructor parameters and stored as attribute. 
 		For tests using constructor parameters instead of a definition structure we can keep these attributes, query the proxy just when they are None
-	- If we have properties, do we need a dicctionary to hold Connector attributes?
 	- PeerConnectors.__len__()
-	- Rework proxy interface and external objects constructors so that parameters are specified in order of search
+[X]	- Rework proxy interface and external objects constructors so that parameters are specified in order of search
 		(proxy,processingname,kind,direction,connectorname...)
 
 - Network interface:
@@ -63,5 +62,8 @@
 
 - Bugs
 	- Network.__dir__ should return also types
+	- Do not allow repeated connections
+	- > and < operators should ensure direction matches with arrows
+
 
 
