--- a/trunk/ipyclam/TODO
+++ b/trunk/ipyclam/TODO
@@ -57,13 +57,14 @@
 	- Test Connectors.connect(Processing)
 		connects all feasible in same order
 		must define exact behaviour
-[X]	- Test > and < operators to connect
+[X]	- Test > operator to connect
+[X]	- Test < operator to connect
 
 
 - Bugs
 [X]	- Network.__dir__ should return also types
-	- Do not allow repeated connections
-	- > and < operators should ensure direction matches with arrows
+[X]	- Do not allow repeated connections
+[X]	- > and < operators should ensure direction matches with arrows
 
 
 
